--- a/react/dockerizing react app/docker-compose.dev.yml
+++ b/react/dockerizing react app/docker-compose.dev.yml
@@ -5,6 +5,7 @@ services:
     container_name: app-dev
     image: app-dev
     build:
+      context: .
       target: development
     volumes:
       - ./src:/app/src
